# programmiersprachen-raytracer

./: UML_link
framework/: box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  hit.cpp  hit.hpp  light.hpp  material.hpp  ray.hpp  renderer.cpp  renderer.hpp  scene.hpp  sdfloader.cpp  sdfloader.hpp  shape.cpp  shape.hpp  shpere.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
source/: CMakeLists.txt  raytracer.cpp  raytracer_animation.cpp  raytracer_sdfloader.cpp  raytracer_test.cpp  raytracer_transtest.cpp  sdf_generator.cpp  tests.cpp
